2013-06-03  Jeremy Cribb
	* added msd_bayes folder which contains code for analyzing/filtering MSD data according to different model types using Bayesian statistics.  It was written by the Mark Bathe group at MIT, code located at www.msd-bayes.org.  The code has a licensing agreement included that restricts any changes.  Use at your own risk. 

2013-02-01  Christian Stith <chstith@ncsu.edu>
	* sortn.m: removed debugging printout line.
	* uipickfiles.m: implemented sortn function for alphanumerical sorting.

2012-09-21  Jeremy Cribb <jcribb@email.unc.edu>
	* plot2svg_2d.m: fixed fileparts function call because new matlab version deprecates the 'version' output variable.

2012-07-12  Christian Stith <chstith@ncsu.edu>
	* crop.m: added. automatically crops marginal whitespace from images. modified to include new directory parameter. from http://www.mathworks.com/matlabcentral/fileexchange/20427-crop-whitespace-from-an-image
	
2012-06-20  Christian Stith <chstith@ncsu.edu>
	* exportfig.m: added. improved consistency of exported matlab figures. from http://www.mathworks.com/company/newsletters/digest/june00/export/index.html
	* sortn.m: added. improved textual sorting algorithm that rationally sorts mixed alpha-numeric strings. from http://www.mathworks.com/matlabcentral/fileexchange/8399-sortn-sort-textual-lists (added recommended 'i' fix)
	* uipickfiles.m: added. a user interface that allows for selection of multiple files and directories. from http://www.mathworks.com/matlabcentral/fileexchange/10867

2012-06-13 Christian Stith <chstith@ncsu.edu>
	* xlsappend.m: added. appends information to the end of an excel spreadsheet.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* barwitherr.m: added.  generates bar plots *with* errorbars.
	* cprintf.m: added.  generates color-definable text output to stdout, stderr.

2011-06-13  Jeremy Cribb <jcribb@email.unc.edu>